MDEV-15977 Assertion !thd->in_sub_stmt failed in trans_commit_stmt